--- a/README
+++ b/README
@@ -8,3 +8,6 @@ the playback level relative to the reference tone. The user can thereby
 listen to the two tones and hear the effect of masking. The user is 
 also able to plot there findings to build a masking profile for their
 own hearing.
+
+To use download the Masking.html file to a local drive and open it
+with a HTML5 compatible browser.
